Prevent scrollbar causing x overflow

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -34,6 +34,11 @@
 
 /* Page Layout */
 
+html{ 
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .layout {
   display: flex;
   flex-direction: row;
